# song-code

./: .env.example  .gitignore  main.py  pyproject.toml
src/: agent.py  memory.py  prompt.py  skills.py  subagent.py  tools.py
src/minicode/: agent.py  frontmatter.py  main.py  memory.py  prompt.py  skills.py  subagent.py  tools.py  ui.py
test/: test.py  type_test.py
